# ChessBot

./: .gitignore
.github/workflows/: cmake-single-platform.yml
Pythontests/: compare.py  main.py
src/: CMakeLists.txt  main.cpp
src/Display/: CMakeLists.txt  Display.cpp  Display.h
src/Evaluation/: CMakeLists.txt  Evaluation.cpp  Evaluation.h
src/MoveGenerator/: CMakeLists.txt
src/MoveGenerator/MoveGenerator/: CMakeLists.txt  MoveGen.cpp  MoveGen.h
src/MoveGenerator/Objects/: Board.h  CMakeLists.txt  PositionInfo.cpp  PositionInfo.h
src/MoveGenerator/PreGen/: CMakeLists.txt  PreMoveGen.cpp  PreMoveGen.h
src/Utilities/: CMakeLists.txt
src/Utilities/Hash/: CMakeLists.txt  Hash.cpp  Hash.h
